# YuChunGui-ColorStrip

./: .gitignore  CMakeLists.txt  CMakeUtils.cmake  README.md  sdkconfig
components/dht11/: CMakeLists.txt  README.md  dht11.c  dht11.h
components/led_strip/: CMakeLists.txt  README.md  led_strip.c
components/led_strip/impl/: led_strip_impl_ws2812.c  led_strip_impl_ws2812.h
components/led_strip/interface/: led_strip.h
main/: CMakeLists.txt  YuChunGui-ColorStrip2.c  ycg_app.c
main/blufi/: blufi_example.h  blufi_example_main.c  blufi_security.c  ycg_blufi.h
main/system/: system.c  system.h
main/system/blufi/: blufi_security.c  ycg_blufi.c  ycg_blufi.h  ycg_blufi_event.c
main/system/wifi/: ycg_wifi.c  ycg_wifi.h
main/tencent_cloud/: tencent_cloud_app.c  tencent_cloud_app.h
main/tencent_cloud/data_model/: data_config.c  莲子粥灯带驱动.json
main/tencent_cloud/include/: config.h
main/wifi_manager/: wifi_manager.c  wifi_manager.h
